fixed the z-index of the image carousel

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -301,4 +301,6 @@ body {
 .carousel img {
   width: 100%;
   display: none;
+  position: relative;
+  z-index: -1;
 }
