--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -37,5 +37,7 @@
   img {
     .width-100();
     display: none;
+    position: relative;
+    z-index: -1;
   }
 }
